<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SegundaActividad">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton1"
        android:id="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="22dp"
        android:background="#0bf241"
        android:onClick="boton1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton2"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:onClick="boton2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton3"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:onClick="boton3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton4"
        android:id="@+id/button5"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_alignTop="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="boton4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton5"
        android:id="@+id/button6"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_alignTop="@+id/button7"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="boton5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton6"
        android:id="@+id/button7"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="42dp"
        android:onClick="boton6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton7"
        android:id="@+id/button8"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="boton7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton8"
        android:id="@+id/button9"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_alignTop="@+id/button11"
        android:layout_centerHorizontal="true"
        android:onClick="boton8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton10"
        android:id="@+id/button10"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_below="@+id/button9"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:layout_marginTop="83dp"
        android:onClick="boton10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Boton9"
        android:id="@+id/button11"
        android:textSize="22dp"
        android:background="#FF0BF241"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="boton9" />
</RelativeLayout>
